force-app/main/default/objects/bvd_connector__Import_Setting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>bvd_connector__Processing__c</fullName>
        <label>Processing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bvd_connector__SObject__c</fullName>
        <label>SObject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bvd_connector__Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Import Setting</label>
</CustomObject>